# jimp_exercises

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h  main.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Exceptions.h  GreedyScheduler.cpp  GreedyScheduler.h  Schedule.cpp  Schedule.h  Scheduler.cpp  Scheduler.h  SchedulerInterface.h  SchedulingItem.cpp  SchedulingItem.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  main.cpp
lab10/scheduler/: Exceptions.h  GreedyScheduler.cpp  GreedyScheduler.h  Schedule.cpp  Schedule.h  Scheduler.cpp  Scheduler.h  SchedulingItem.cpp  SchedulingItem.h
lab11/: CMakeLists.txt
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/logger/: CMakeLists.txt  Logger.cpp  Logger.h  logger.cpp  logger.h  main.cpp
lab11/mean/: CMakeLists.txt  Mean.cpp  Mean.h  main.cpp
lab11/repository/: Repository.cpp  Repository.h  main.cpp
lab11/sum/: Sum.cpp  Sum.h  main.cpp
lab11/value/: Value.cpp  Value.h  main.cpp
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: AcademiaSequentialGenerator.cpp  AcademiaSequentialGenerator.h  CMakeLists.txt  main.cpp
lab12/academiateacherhash/: AcademiaTeacherHash.cpp  AcademiaTeacherHash.h
lab12/sequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/teacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  main.cpp  tree.cpp  tree.h
lab12/treeiterators/: CMakeLists.txt  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  ArabicRomanTest.cpp  ArabicRomanTest.h  CMakeLists.txt  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  Array2d.cpp  Array2d.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/ccounter/: CCounter.cpp  CCounter.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/: CMakeLists.txt
lab4/dynamictable/: CMakeLists.txt  DynamicTable.cpp  DynamicTable.h  main.cpp
lab4/name/: Name.cpp  Name.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: NetsTemplateEngine.cpp  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab4/squareclass/: CMakeLists.txt  Point.cpp  Point.h  SquareClass.cpp  SquareClass.h  main.cpp  squareClass.h
lab5/: CMakeLists.txt
lab5/marsjanin/: CMakeLists.txt  Marsjanin.cpp  Marsjanin.h  main.cpp
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/memorychunk/: MemoryChunk.cpp  MemoryChunk.h  main.cpp
lab5/parentchild/: CMakeLists.txt  Child.cpp  Child.h  Parent.cpp  Parent.h  ParentChild.cpp  ParentChild.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab5/xxx/: CMakeLists.txt  XXX.cpp  XXX.h  Xxx.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/point/: CMakeLists.txt  main.cpp  point.cpp  point.h
lab6/student/: CMakeLists.txt  Student.cpp  Student.h  StudentRepository.cpp  StudentRepository.h  StudyYear.cpp  StudyYear.h  main.cpp
lab6/wordcounter/: Counts.cpp  Counts.h  Word.cpp  Word.h  WordCounter.cpp  WordCounter.h  main.cpp
lab6/zipper/: Zipper.cpp  Zipper.h  main.cpp
lab7/: CMakeLists.txt
lab7/KoloKula/: CMakeLists.txt  Kolo.cpp  Kolo.h  Kula.cpp  Kula.h  main.cpp
lab7/ksztalt/: Kolo.cpp  (+9 more)
lab8/: CMakeLists.txt
lab8/adjust_subtitles/: CMakeLists.txt  Subtitles.cpp  Subtitles.h  in.txt  main.cpp
lab8/exceptions_example/: CMakeLists.txt  main.cpp
lab8/movie_subtitles/: CMakeLists.txt  MicroDvdSubtitles.cpp  MicroDvdSubtitles.h  MovieSubtitles.cpp  MovieSubtitles.h  SubRipSubtitles.cpp  SubRipSubtitles.h  main.cpp
lab9/academiaserializer/: Building.cpp  Building.h  CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h  Room.cpp  Room.h  Serializable.cpp  Serializable.h  Serialization.h  XmlSerializer.cpp  XmlSerializer.h  main.cpp.cpp
lab9/academiaserialzer/: Building.cpp  Building.h  CMakeLists.txt  Room.cpp  Room.h  Serializable.cpp  Serializable.h  Serialization.h
tests/lab9test/: CMakeLists.txt
tests/lib/gtest-1.8.0/googletest/: CHANGES  Makefile.am  README.md  configure.ac
tests/lib/gtest-1.8.0/googletest/codegear/: gtest.cbproj  gtest_unittest.cbproj
tests/lib/gtest-1.8.0/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_6_XcodeGuide.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md  V1_7_Samples.md  V1_7_XcodeGuide.md
tests/lib/gtest-1.8.0/googletest/include/gtest/: gtest-param-test.h.pump
tests/lib/gtest-1.8.0/googletest/include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-type-util.h.pump
tests/lib/gtest-1.8.0/googletest/m4/: acx_pthread.m4  gtest.m4
tests/lib/gtest-1.8.0/googletest/make/: Makefile
tests/lib/gtest-1.8.0/googletest/msvc/: gtest_prod_test-md.vcproj  gtest_prod_test.vcproj  gtest_unittest-md.vcproj  gtest_unittest.vcproj
tests/lib/gtest-1.8.0/googletest/scripts/: gtest-config.in
tests/lib/gtest-1.8.0/googletest/scripts/test/: Makefile
tests/lib/gtest-1.8.0/googletest/test/: gtest_output_test_golden_lin.txt
tests/lib/gtest-1.8.0/googletest/xcode/Samples/FrameworkSample/: runtests.sh
tests/lib/gtest-1.8.0/googletest/xcode/Scripts/: runtests.sh
tests/lib/gtest-1.8.0/googletest/xcode/gtest.xcodeproj/: project.pbxproj
(+55 files in other folders)
